upgrading neo4j to 1.3, adding new relationship type (LivedAt)

--- a/todo
+++ b/todo
@@ -1,6 +1,7 @@
-- qual foi o caminho percorrido por uma pessoa?
+- mostrar: quem passou em tal lugar... também passou por X.
 
-- busca com fulltextsearch
-- fazer diversos relacionamentos (viajou, morou, fez conexao) com propriedades... isso eh o q eh foda de fazer no
-relacional.
-- traduzir codigo pra ingles
+- link pra ir pra home
+
+- testes :)
+
+- fazer com sqls
