improving todo list

--- a/todo
+++ b/todo
@@ -1,7 +1,9 @@
-- mostrar: quem passou em tal lugar... também passou por X.
+- maven
 
-- link pra ir pra home
+- README de como subir o projeto
 
-- testes :)
+- + testes :)
+
+- distancias entre os lugares (quero ir de um lugar para outro... qual caminho mais curto?)
 
 - fazer com sqls
